--- a/ubskin_web_django/templates/member/a_user_order_manage.html
+++ b/ubskin_web_django/templates/member/a_user_order_manage.html
@@ -96,7 +96,7 @@
         
     <div class="bs-docs-section">
         {% for i in data_list %}
-        <div class="panel panel-success categories_list">
+        <div class="panel panel-default categories_list">
             <div class="panel-heading"><input type="checkbox" class="item_checkbox" item-id={{i.categorie_id}}>订单号:{{i.order_num}}  <span style="padding-left: 30px">下单时间:{{i.create_time}}</span><span style="padding-left: 30px">客户:{{i.member_id}}</span></div>
             <div class="panel-body">
                 <div class="media-left">
