修改评论接口以及图片上传接口和微信端对接

--- a/ubskin_web_django/templates/member/a_user_order_manage.html
+++ b/ubskin_web_django/templates/member/a_user_order_manage.html
@@ -287,7 +287,8 @@
                             }else{
                                 
                             }
-                        }
+                        },
+                        'json',
                     )
                     
                 }
