分页加上总数据和分页数量总数

--- a/ubskin_web_django/templates/order/a_item_qr_code_manage.html
+++ b/ubskin_web_django/templates/order/a_item_qr_code_manage.html
@@ -120,7 +120,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
             {% Pagingfunc current_page data_count filter_args request.uri as page %}
-            {{ page | safe }}
+            {{ page | safe }}<p>当前页{{ data_list|length }}/共{{ data_count }}条数据</p>
         </ul>
     </nav>
 </div>
