--- a/ubskin_web_django/templates/item/a_brand_manage.html
+++ b/ubskin_web_django/templates/item/a_brand_manage.html
@@ -86,7 +86,7 @@
         <nav aria-label="Page navigation">
             <ul class="pagination page_box">
                 {% Pagingfunc current_page brands_count filter_args request.path as page %}
-                {{ page | safe }}
+                {{ page | safe }} <p>当前页{{ brands_list|length }}/共{{ brands_count }}条数据</p>
             </ul>
         </nav>
     </div>
