--- a/ubskin_web_django/templates/item/a_categorie_manage.html
+++ b/ubskin_web_django/templates/item/a_categorie_manage.html
@@ -74,7 +74,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
             {% Pagingfunc current_page categories_count filter_args request.path as page %}
-            {{ page | safe }}
+            {{ page | safe }}<p>当前页{{ categories_list|length }}/共{{ categories_count }}条数据</p>
         </ul>
     </nav>
 </div>
