--- a/ubskin_web_django/templates/item/a_item_comment_manage.html
+++ b/ubskin_web_django/templates/item/a_item_comment_manage.html
@@ -80,7 +80,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
             {% Pagingfunc current_page count filter_args request.path as page %}
-            {{ page | safe }}
+            {{ page | safe }}<p>当前页{{ item_comments_list|length }}/共{{ count }}条数据</p>
         </ul>
     </nav>
 </div>
