--- a/ubskin_web_django/templates/item/a_item_manage.html
+++ b/ubskin_web_django/templates/item/a_item_manage.html
@@ -106,7 +106,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
             {% Pagingfunc current_page item_count filter_args uri as page %}
-            {{ page | safe }}
+            {{ page | safe }}<p>当前页{{ item_list|length }}/共{{ item_count }}条数据</p>
         </ul>
     </nav>
 </div>
