--- a/ubskin_web_django/templates/member/a_member_manage.html
+++ b/ubskin_web_django/templates/member/a_member_manage.html
@@ -134,7 +134,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination page_box">
             {% Pagingfunc current_page member_count filter_args uri as page %}
-            {{ page | safe }}
+            {{ page | safe }}<p>当前页{{ member_list|length }}/共{{ member_count }}条数据</p>
         </ul>
     </nav>
 </div>
