--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -104,10 +104,10 @@
             <li class="categories_manage"><a href="{% url 'categorie_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>分类管理</span></a></li>
             <li class="item_comments_manage"><a href="{% url 'item_comment_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>评论管理</span></a></li>
             <li class="order_manage"><a href="{% url 'order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>扫码出库</span></a></li>
-            <li class="item_qr_code_manage"><a href="{% url 'item_qr_Code_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>物码查询</span></a></li>
-            <li class="recv_manage"><a href="{% url 'recv_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>收货方管理</span></a></li>
+            <!-- <li class="item_qr_code_manage"><a href="{% url 'item_qr_Code_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>物码查询</span></a></li>
+            <li class="recv_manage"><a href="{% url 'recv_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>收货方管理</span></a></li> -->
             <li class="user_order_manage"><a href="{% url 'user_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户订单</span></a></li>
-            <li class="recv_addr_manage"><a href="{% url 'recv_addr_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户收货地址</span></a></li>
+            <!-- <li class="recv_addr_manage"><a href="{% url 'recv_addr_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户收货地址</span></a></li> -->
             <li class="out_order_manage"><a href="{% url 'out_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>外部订单数据</span></a></li>
           </ul>
         </section>
