--- a/ubskin_web_django/templates/item/a_add_brand.html
+++ b/ubskin_web_django/templates/item/a_add_brand.html
@@ -38,6 +38,14 @@
             <input type="text" class="form-control" id="from_country" name="key_word" value="{% if form_data.key_word %}{{ form_data.key_word }}{% endif %}">
         </div>
         <div class="form-group">
+            <label for="" class="control-label">是否为热门品牌:</label>
+            {% if form_data.is_hot %}
+            <input type="checkbox"  id="recipient-name" name="is_hot" checked>
+            {% else %}
+            <input type="checkbox"  id="recipient-name" name="is_hot">
+            {% endif %}
+        </div>
+        <div class="form-group">
             <label for="from_country">品牌简介</label>
             <textarea name="brand_about" id="" cols="100" rows="10" class="form-control"> {% if form_data.brand_about %}{{ form_data.brand_about }}{% endif %}</textarea>
         </div>
