--- a/ubskin_web_django/templates/member/a_member_manage.html
+++ b/ubskin_web_django/templates/member/a_member_manage.html
@@ -17,7 +17,10 @@
 </style>
 {% endblock %}
 {% block title %}
-用户表            
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="{% url 'member_manage' %}">用户表</a></li>
+    <li role="presentation"><a href="{% url 'recv_addr_manage' %}">用户收货地址</a></li>
+</ul>              
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
