--- a/ubskin_web_django/templates/member/a_recv_addr_manage.html
+++ b/ubskin_web_django/templates/member/a_recv_addr_manage.html
@@ -17,7 +17,10 @@
 </style>
 {% endblock %}
 {% block title %}
-用户地址管理            
+<ul class="nav nav-tabs">
+    <li role="presentation"><a href="{% url 'member_manage' %}">用户表</a></li>
+    <li role="presentation" class="active"><a href="{% url 'recv_addr_manage' %}">用户收货地址</a></li>
+</ul>              
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
@@ -118,7 +121,7 @@
 {% block js %}
     <script>
     $(function(){
-        $('.recv_addr_manage').addClass('active')
+        $('.member_manage').addClass('active')
         $('#modalItemCodes').on('show.bs.modal', (e) => {
             let btn = $(e.relatedTarget);
             let data_id = btn.data('dataid');
