--- a/ubskin_web_django/templates/order/a_order_manage.html
+++ b/ubskin_web_django/templates/order/a_order_manage.html
@@ -17,7 +17,11 @@
 </style>
 {% endblock %}
 {% block title %}
-商品出库表            
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="{% url 'order_manage' %}">商品出库表</a></li>
+    <li role="presentation"><a href="{% url 'item_qr_Code_manage' %}">物码查询</a></li>
+    <li role="presentation"><a href="{% url 'recv_manage' %}">收获方管理</a></li>
+</ul>           
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
