页面细节优化

--- a/ubskin_web_django/templates/member/a_member_manage.html
+++ b/ubskin_web_django/templates/member/a_member_manage.html
@@ -25,6 +25,7 @@
 {% block page_header %}
 <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> 用户管理</a></li>
+    <li><a href="#"><i class="fa fa-dashboard"></i> 用户表</a></li>
 </ol>
 {% endblock %}
 
