--- a/ubskin_web_django/templates/member/a_recv_addr_manage.html
+++ b/ubskin_web_django/templates/member/a_recv_addr_manage.html
@@ -24,7 +24,8 @@
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i>用户地址管理</a></li>
+    <li><a href="#"><i class="fa fa-dashboard"></i> 用户管理</a></li>
+    <li><a href="#"><i class="fa fa-dashboard"></i>用户收获地址</a></li>
 </ol>
 {% endblock %}
 
