--- a/ubskin_web_django/templates/order/a_order_manage.html
+++ b/ubskin_web_django/templates/order/a_order_manage.html
@@ -25,6 +25,7 @@
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
+    <li><a href="#"><i class="fa fa-dashboard"></i> 扫码出库</a></li>
     <li><a href="#"><i class="fa fa-dashboard"></i> 商品出库表</a></li>
 </ol>
 {% endblock %}
@@ -142,8 +143,5 @@
                 });
             });  
         })
-        
- 
-
     </script>
 {% endblock %}
