--- a/ubskin_web_django/templates/order/a_recv_manage.html
+++ b/ubskin_web_django/templates/order/a_recv_manage.html
@@ -20,7 +20,7 @@
 <ul class="nav nav-tabs">
     <li role="presentation"><a href="{% url 'order_manage' %}">商品出库表</a></li>
     <li role="presentation"><a href="{% url 'item_qr_Code_manage' %}">物码查询</a></li>
-    <li role="presentation" class="active"><a href="{% url 'recv_manage' %}">收获方管理</a></li>
+    <li role="presentation" class="active"><a href="{% url 'recv_manage' %}">收货方管理</a></li>
 </ul>         
 {% endblock %}
 {% block page_header %}
