--- a/ubskin_web_django/templates/order/a_recv_manage.html
+++ b/ubskin_web_django/templates/order/a_recv_manage.html
@@ -26,7 +26,7 @@
 {% block page_header %}
 <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> 扫码出库</a></li>
-    <li><a href="#"><i class="fa fa-dashboard"></i> 收获方管理</a></li>
+    <li><a href="#"><i class="fa fa-dashboard"></i> 收货方管理</a></li>
 </ol>
 {% endblock %}
 
