--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -36,7 +36,7 @@
         <!-- Logo -->
         <a href="/myadmin" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>A</b>LT</span>
+          <span class="logo-mini"><b>U</b>BS</span>
           <!-- logo for regular state and mobile devices -->
           <span class="logo-lg"><b>优贝施</b>后台</span>
         </a>
