加入评论分类搜索，修改二维码是否重复录入的检查方式。现在为提交之前没次输入二维码都会检查，是否已经存在数据库中。

--- a/ubskin_web_django/templates/item/a_editor_comment.html
+++ b/ubskin_web_django/templates/item/a_editor_comment.html
@@ -26,8 +26,8 @@
           <span>{% if form_errors and form_errors.comment_content %}{{ form_errors.comment_content }}{% endif %}</span>
         </div>
         <div class="form-group">
-          <label for="cn_name_abridge">所属商品ID: </label>
-          <span style="font-size: 20px">{% if form_data and form_data.item_id %}{{ form_data.item_id }}{% endif %}</span>
+          <label for="cn_name_abridge">所属订单号: </label>
+          <span style="font-size: 20px">{% if form_data and form_data.order_num %}{{ form_data.order_num }}{% endif %}</span>
         </div>
       </div><!-- /.box-body -->
 
