--- a/ubskin_web_django/templates/item/a_item_comment_manage.html
+++ b/ubskin_web_django/templates/item/a_item_comment_manage.html
@@ -58,7 +58,12 @@
                             评论内容：{{ i.comment_content }}
                         </div>
                         <div class="col-md-2">
-                            用户名：{{ i.member_name }}
+                            <div class="row">
+                                用户名：{{ i.member_name }}
+                            </div>
+                            <div class="row">
+                                所属订单:{{ i.order_num }}
+                            </div>
                         </div>
                         <div class="col-md-2">
                             <div class="row">
