--- a/ubskin_web_django/templates/a_layout.html
+++ b/ubskin_web_django/templates/a_layout.html
@@ -106,6 +106,7 @@
             <li class="order_manage"><a href="{% url 'order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>扫码出库</span></a></li>
             <li class="user_order_manage"><a href="{% url 'user_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>用户订单</span></a></li>
             <li class="out_order_manage"><a href="{% url 'out_order_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>外部订单数据</span></a></li>
+            <li class="campaigns_manage"><a href="{% url 'campaigns_manage' %}"><i class="fa fa-circle-o text-aqua"></i> <span>广告位管理</span></a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
