--- a/ubskin_web_django/templates/ad/a_campaigns_manage.html
+++ b/ubskin_web_django/templates/ad/a_campaigns_manage.html
@@ -38,68 +38,80 @@
         </div>
     </div>
     <div class="col-md-4">
-        <a href="" class="btn btn-info" >添加活动 <span class="glyphicon glyphicon-plus"></span></a>
-        <button type="button" class="btn btn-default choose_brands">选择全部<span class="glyphicon glyphicon-saved"></span></button>
+        <a href="{% url 'add_campaign' %}" class="btn btn-info" >添加活动 <span class="glyphicon glyphicon-plus"></span></a>
+        <button type="button" class="btn btn-default choose_datas">选择全部<span class="glyphicon glyphicon-saved"></span></button>
         <button type="button" class="btn btn-danger delete_brands" >删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
 {% endblock %}
-{% for i in data_list %}
-<div class="panel panel-warning brands_list">
-    <div class="panel-heading"><input type="checkbox" class="item_checkbox" item-id={{i.campaign_id}}>品牌名：{{i.campaign_name}}</div>
-    <div class="panel-body">
-        <div class="media-left">
-            <a href="#">
-                <img class="media-object" src="{% build_photo_url i.campaigns_photo_id %}" style="width: 70px; height: 70px;">
-            </a>
+
+{% block content %}
+<div class="row" style="padding: 15px;overflow: auto">
+    <div class="col-md-3">
+        <div class="list-group">
+            <!-- <a href="{% url 'categorie_manage' %}?page={{ current_page }}&is_hot={{ i.is_hot }}" class="list-group-item active">
+                    <span class="badge">3</span>
+                    热门分类
+            </a> -->
+            {% for i in location_list %}
+                {% if form_data.location == i.location %}
+                    <a href="{% url 'campaigns_manage' %}?page={{ current_page }}&location={{ i.location }}" class="list-group-item active">
+                            <span class="badge">{{ i.c }}</span>
+                            {{ i.location }}
+                    </a>
+                {% else %}
+                    <a href="{% url 'campaigns_manage' %}?page={{ current_page }}&location={{ i.location }}" class="list-group-item">
+                        <span class="badge">{{ i.c }}</span>
+                        {{ i.location }}
+                    </a>
+                {% endif %}
+            {% endfor %}
         </div>
-            <div class="media-body">
-            <div class="row">
-                <div class="col-md-4">
-                    {% if i.intorduction is not None %}{{ i.intorduction }}{% endif %}
-                </div>
-                <div class="col-md-2">
-                    <div class="row">
-                        活动开始时间: {{ i.start_time }}
+    </div>
+    <div class="col-md-9" >
+        <div class="row">
+            {% for i in data_list %}
+                <div class="col-md-4 data_list" >
+                    <div class="thumbnail">
+                        <input type="checkbox">
+                        <img src="{% build_photo_url i.campaigns_photo_id %}" alt="..." style="width: 150px;height: 150px;">
+                        <div class="caption">
+                            <a href=""><strong>{% str_step i.campaign_name 13 %}</strong></a>
+                            <p>开始：{% parse_timestamps i.start_time %}</p>
+                            <p>结束：{% parse_timestamps i.end_time %}</p>
+                            <p>活动位置：{{ i.location }}</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2">
-                        活动结束时间: {{ i.end_time }}
-                </div>
-                <div class="col-md-2">
-                        活动位置: {{ i.location }}
-                </div>
-                <div class="col-md-2">
-                    <div class="row">
-                        <a  href="" style='cursor:pointer;text-decoration:none;'><span class="glyphicon glyphicon-pencil"></span> 编辑</a>
-                    </div>
-                </div>
-            </div>
-            
+            {% endfor %}
+        </div>
+        <div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination page_box">
+                    {% Pagingfunc current_page data_count filter_args request.path as page %}
+                    {{ page | safe }}<p>当前页{{ data_list|length }}/共{{ data_count }}条数据</p>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
-
-{% endfor %}
-{% block content %}
-
 
 {% endblock %}
 {% block js %}
 <script>
     $(function(){
         $('.campaigns_manage').addClass('active')
-        $('.choose_brands').click(function(){
+        $('.choose_datas').click(function(){
             var text =  $(this).text()
-            var $brands_list = $('.brands_list')
+            var $data_list = $('.data_list')
             if(text == '选择全部'){
-                $brands_list.each(function(index, item){
+                $data_list.each(function(index, item){
                     var $f =  $(item).children().find('input[type="checkbox"]')
                     $f.prop('checked', true)
                 })
                 $(this).html('取消全部<span class="glyphicon glyphicon-saved"></span>')
             }else{
-                $brands_list.each(function(index, item){
+                $data_list.each(function(index, item){
                     var $f =  $(item).children().find('input[type="checkbox"]')
                     $f.prop('checked', false)
                 })
@@ -108,7 +120,7 @@
             
         })
         $('.delete_brands').click(function(){
-            var $item_list = $('.brands_list')
+            var $item_list = $('.data_list')
             var brand_ids_list = []
             $item_list.each(function(index, item){
                 var f =  $(item).children().find('input[type="checkbox"]')
